--- a/Demo.html
+++ b/Demo.html
@@ -25,11 +25,15 @@
         <th>Age</th>
       </tr>
       <tr>
-        <td>Name</td>
-        <td>State</td>
-        <td>Age</td>
+        <td>Name1</td>
+        <td>State1</td>
+        <td>Age1</td>
       </tr>
-
+      <tr>
+        <td>Name2</td>
+        <td>State2</td>
+        <td>Age2</td>
+      </tr>
     </table>
   </body>
 </html>
