--- a/Demo.html
+++ b/Demo.html
@@ -21,15 +21,26 @@
     <table>
       <tr>
         <th>Name</th>
-        <th>State</th>
+        <th>Country</th>
         <th>Age</th>
       </tr>
       <tr>
-        <td>Name</td>
-        <td>State</td>
-        <td>Age</td>
+        <td>Donald Trump</td>
+        <td>USA</td>
+        <td>56</td>
       </tr>
-
+      <tr>
+        <td>Narendra Modi</td>
+        <td>India</td>
+        <td>55</td>
+      </tr>
     </table>
+
+    <form>
+      <input type="text" placeholder="Full Name" name="name">
+      <input type="password" placeholder="Password" name="password">
+      <button>Submit</button>
+    </form>
+      
   </body>
 </html>
