--- a/Demo.html
+++ b/Demo.html
@@ -3,8 +3,8 @@
   <head>
     <<title>My Web page</title>
   </head>
-  <h1>First Html webpage</h1>
-
+  <h1 style="color: blue;text-align: center;">First Html webpage</h1>
+  <link rel="stylesheet" href="style.css">
   <body>
     <ul>
       <li>Home</li>
